sysl2/antlr/grammar/sysl_parser.go
// Generated from grammar/SyslParser.g4 by ANTLR 4.7.

package parser // SyslParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "", "'!wrap'", "'!table'", "'!type'", "", "", "", "", "",
	"", "", "", "", "", "'...'", "'..'", "", "", "", "", "", "", "", "", "",
	"'.. * <- *'", "'+'", "'~'", "','", "'='", "'$'", "'/'", "'*'", "':'",
	"'%'", "'.'", "'!'", "'?'", "'@'", "'&'", "'['", "']'", "'{'", "'}'", "'('",
	"')'", "", "'#'", "'|'",
}
var symbolicNames = []string{
	"", "INDENT", "DEDENT", "NativeDataTypes", "HTTP_VERBS", "WRAP", "TABLE",
	"TYPE", "IMPORT", "RETURN", "IF", "FOR_EACH", "FOR", "UNTIL", "ELSE", "LOOP",
	"WHILE", "ALT", "WHATEVER", "DOTDOT", "SET_OF", "ONE_OF", "MIXIN", "DISTANCE",
	"DOT_ARROW", "NAME_SEP", "LESS_COLON", "ARROW_LEFT", "ARROW_RIGHT", "COLLECTOR",
	"PLUS", "TILDE", "COMMA", "EQ", "DOLLAR", "FORWARD_SLASH", "STAR", "COLON",
	"PERCENT", "DOT", "EXCLAIM", "QN", "AT", "AMP", "SQ_OPEN", "SQ_CLOSE",
	"CURLY_OPEN", "CURLY_CLOSE", "OPEN_PAREN", "CLOSE_PAREN", "EMPTY_COMMENT",
	"HASH", "PIPE", "DBL_QT", "SINGLE_QT", "EMPTY_LINE", "INDENTED_COMMENT",
	"DIGITS", "QSTRING", "NEWLINE", "SYSL_COMMENT", "TEXT_LINE", "Name", "WS",
	"PREDICATE_VALUE", "TEXT", "POP_WS", "VAR_NAME",
}

var ruleNames = []string{
	"modifier", "size_spec", "modifier_list", "sq_open", "modifiers", "name_str",
	"reference", "doc_string", "quoted_string", "array_of_strings", "array_of_arrays",
	"nvp", "attributes", "entry", "attribs_or_modifiers", "set_type", "collection_type",
	"user_defined_type", "multi_line_docstring", "annotation_value", "annotation",
	"annotations", "field_type", "array_size", "inplace_tuple", "field", "inplace_table",
	"table", "package_name", "sub_package", "app_name", "name_with_attribs",
	"model_name", "inplace_table_def", "table_refs", "facade", "documentation_stmts",
	"var_in_curly", "query_var", "query_param", "http_path_part", "http_path_var_with_type",
	"http_path_static", "http_path_suffix", "http_path", "endpoint_name", "ret_stmt",
	"call_arg_type", "call_arg", "http_call_part", "rest_call", "call_args",
	"target_endpoint", "target", "call_stmt", "if_stmt", "else_stmt", "if_else",
	"for_stmt", "http_method_comment", "one_of_case_label", "one_of_cases",
	"one_of_stmt", "text_stmt", "mixin", "param", "param_list", "params", "statements",
	"method_def", "shortcut", "simple_endpoint", "rest_endpoint", "collector_query_var",
	"collector_query_param", "collector_call_stmt", "collector_http_stmt_part",
	"collector_http_stmt_suffix", "collector_http_stmt", "publisher", "subscriber",
	"collector_pubsub_call", "collector_action_stmt", "collector_stmts", "collector",
	"event", "subscribe", "app_decl", "application", "path", "import_stmt",
	"imports_decl", "sysl_file",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SyslParser struct {
	*antlr.BaseParser
}

func NewSyslParser(input antlr.TokenStream) *SyslParser {
	this := new(SyslParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SyslParser.g4"

	return this
}

// SyslParser tokens.
const (
	SyslParserEOF              = antlr.TokenEOF
	SyslParserINDENT           = 1
	SyslParserDEDENT           = 2
	SyslParserNativeDataTypes  = 3
	SyslParserHTTP_VERBS       = 4
	SyslParserWRAP             = 5
	SyslParserTABLE            = 6
	SyslParserTYPE             = 7
	SyslParserIMPORT           = 8
	SyslParserRETURN           = 9
	SyslParserIF               = 10
	SyslParserFOR_EACH         = 11
	SyslParserFOR              = 12
	SyslParserUNTIL            = 13
	SyslParserELSE             = 14
	SyslParserLOOP             = 15
	SyslParserWHILE            = 16
	SyslParserALT              = 17
	SyslParserWHATEVER         = 18
	SyslParserDOTDOT           = 19
	SyslParserSET_OF           = 20
	SyslParserONE_OF           = 21
	SyslParserMIXIN            = 22
	SyslParserDISTANCE         = 23
	SyslParserDOT_ARROW        = 24
	SyslParserNAME_SEP         = 25
	SyslParserLESS_COLON       = 26
	SyslParserARROW_LEFT       = 27
	SyslParserARROW_RIGHT      = 28
	SyslParserCOLLECTOR        = 29
	SyslParserPLUS             = 30
	SyslParserTILDE            = 31
	SyslParserCOMMA            = 32
	SyslParserEQ               = 33
	SyslParserDOLLAR           = 34
	SyslParserFORWARD_SLASH    = 35
	SyslParserSTAR             = 36
	SyslParserCOLON            = 37
	SyslParserPERCENT          = 38
	SyslParserDOT              = 39
	SyslParserEXCLAIM          = 40
	SyslParserQN               = 41
	SyslParserAT               = 42
	SyslParserAMP              = 43
	SyslParserSQ_OPEN          = 44
	SyslParserSQ_CLOSE         = 45
	SyslParserCURLY_OPEN       = 46
	SyslParserCURLY_CLOSE      = 47
	SyslParserOPEN_PAREN       = 48
	SyslParserCLOSE_PAREN      = 49
	SyslParserEMPTY_COMMENT    = 50
	SyslParserHASH             = 51
	SyslParserPIPE             = 52
	SyslParserDBL_QT           = 53
	SyslParserSINGLE_QT        = 54
	SyslParserEMPTY_LINE       = 55
	SyslParserINDENTED_COMMENT = 56
	SyslParserDIGITS           = 57
	SyslParserQSTRING          = 58
	SyslParserNEWLINE          = 59
	SyslParserSYSL_COMMENT     = 60
	SyslParserTEXT_LINE        = 61
	SyslParserName             = 62
	SyslParserWS               = 63
	SyslParserPREDICATE_VALUE  = 64
	SyslParserTEXT             = 65
	SyslParserPOP_WS           = 66
	SyslParserVAR_NAME         = 67
)

// SyslParser rules.
const (
	SyslParserRULE_modifier                   = 0
	SyslParserRULE_size_spec                  = 1
	SyslParserRULE_modifier_list              = 2
	SyslParserRULE_sq_open                    = 3
	SyslParserRULE_modifiers                  = 4
	SyslParserRULE_name_str                   = 5
	SyslParserRULE_reference                  = 6
	SyslParserRULE_doc_string                 = 7
	SyslParserRULE_quoted_string              = 8
	SyslParserRULE_array_of_strings           = 9
	SyslParserRULE_array_of_arrays            = 10
	SyslParserRULE_nvp                        = 11
	SyslParserRULE_attributes                 = 12
	SyslParserRULE_entry                      = 13
	SyslParserRULE_attribs_or_modifiers       = 14
	SyslParserRULE_set_type                   = 15
	SyslParserRULE_collection_type            = 16
	SyslParserRULE_user_defined_type          = 17
	SyslParserRULE_multi_line_docstring       = 18
	SyslParserRULE_annotation_value           = 19
	SyslParserRULE_annotation                 = 20
	SyslParserRULE_annotations                = 21
	SyslParserRULE_field_type                 = 22
	SyslParserRULE_array_size                 = 23
	SyslParserRULE_inplace_tuple              = 24
	SyslParserRULE_field                      = 25
	SyslParserRULE_inplace_table              = 26
	SyslParserRULE_table                      = 27
	SyslParserRULE_package_name               = 28
	SyslParserRULE_sub_package                = 29
	SyslParserRULE_app_name                   = 30
	SyslParserRULE_name_with_attribs          = 31
	SyslParserRULE_model_name                 = 32
	SyslParserRULE_inplace_table_def          = 33
	SyslParserRULE_table_refs                 = 34
	SyslParserRULE_facade                     = 35
	SyslParserRULE_documentation_stmts        = 36
	SyslParserRULE_var_in_curly               = 37
	SyslParserRULE_query_var                  = 38
	SyslParserRULE_query_param                = 39
	SyslParserRULE_http_path_part             = 40
	SyslParserRULE_http_path_var_with_type    = 41
	SyslParserRULE_http_path_static           = 42
	SyslParserRULE_http_path_suffix           = 43
	SyslParserRULE_http_path                  = 44
	SyslParserRULE_endpoint_name              = 45
	SyslParserRULE_ret_stmt                   = 46
	SyslParserRULE_call_arg_type              = 47
	SyslParserRULE_call_arg                   = 48
	SyslParserRULE_http_call_part             = 49
	SyslParserRULE_rest_call                  = 50
	SyslParserRULE_call_args                  = 51
	SyslParserRULE_target_endpoint            = 52
	SyslParserRULE_target                     = 53
	SyslParserRULE_call_stmt                  = 54
	SyslParserRULE_if_stmt                    = 55
	SyslParserRULE_else_stmt                  = 56
	SyslParserRULE_if_else                    = 57
	SyslParserRULE_for_stmt                   = 58
	SyslParserRULE_http_method_comment        = 59
	SyslParserRULE_one_of_case_label          = 60
	SyslParserRULE_one_of_cases               = 61
	SyslParserRULE_one_of_stmt                = 62
	SyslParserRULE_text_stmt                  = 63
	SyslParserRULE_mixin                      = 64
	SyslParserRULE_param                      = 65
	SyslParserRULE_param_list                 = 66
	SyslParserRULE_params                     = 67
	SyslParserRULE_statements                 = 68
	SyslParserRULE_method_def                 = 69
	SyslParserRULE_shortcut                   = 70
	SyslParserRULE_simple_endpoint            = 71
	SyslParserRULE_rest_endpoint              = 72
	SyslParserRULE_collector_query_var        = 73
	SyslParserRULE_collector_query_param      = 74
	SyslParserRULE_collector_call_stmt        = 75
	SyslParserRULE_collector_http_stmt_part   = 76
	SyslParserRULE_collector_http_stmt_suffix = 77
	SyslParserRULE_collector_http_stmt        = 78
	SyslParserRULE_publisher                  = 79
	SyslParserRULE_subscriber                 = 80
	SyslParserRULE_collector_pubsub_call      = 81
	SyslParserRULE_collector_action_stmt      = 82
	SyslParserRULE_collector_stmts            = 83
	SyslParserRULE_collector                  = 84
	SyslParserRULE_event                      = 85
	SyslParserRULE_subscribe                  = 86
	SyslParserRULE_app_decl                   = 87
	SyslParserRULE_application                = 88
	SyslParserRULE_path                       = 89
	SyslParserRULE_import_stmt                = 90
	SyslParserRULE_imports_decl               = 91
	SyslParserRULE_sysl_file                  = 92
)

// IModifierContext is an interface to support dynamic dispatch.
type IModifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsModifierContext differentiates from other interfaces.
	IsModifierContext()
}

type ModifierContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModifierContext() *ModifierContext {
	var p = new(ModifierContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SyslParserRULE_modifier
	return p
}

func (*ModifierContext) IsModifierContext() {}

func NewModifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModifierContext {
	var p = new(ModifierContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SyslParserRULE_modifier

	return p
}

func (s *ModifierContext) GetParser() antlr.Parser { return s.parser }

func (s *ModifierContext) TILDE() antlr.TerminalNode {
	return s.GetToken(SyslParserTILDE, 0)
}

func (s *ModifierContext) AllName() []antlr.TerminalNode {
	return s.GetTokens(SyslParserName)
}

func (s *ModifierContext) Name(i int) antlr.TerminalNode {
	return s.GetToken(SyslParserName, i)
}

func (s *ModifierContext) AllPLUS() []antlr.TerminalNode {
	return s.GetTokens(SyslParserPLUS)
}

func (s *ModifierContext) PLUS(i int) antlr.TerminalNode {
	return s.GetToken(SyslParserPLUS, i)
}

func (s *ModifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.EnterModifier(s)
	}
}

func (s *ModifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.ExitModifier(s)
	}
}

func (p *SyslParser) Modifier() (localctx IModifierContext) {
	localctx = NewModifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SyslParserRULE_modifier)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(186)
		p.Match(SyslParserTILDE)
	}
	{
		p.SetState(187)
		p.Match(SyslParserName)
	}
	p.SetState(192)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SyslParserPLUS {
		{
			p.SetState(188)
			p.Match(SyslParserPLUS)
		}
		{
			p.SetState(189)
			p.Match(SyslParserName)
		}

		p.SetState(194)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISize_specContext is an interface to support dynamic dispatch.
type ISize_specContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSize_specContext differentiates from other interfaces.
	IsSize_specContext()
}

type Size_specContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySize_specContext() *Size_specContext {
	var p = new(Size_specContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SyslParserRULE_size_spec
	return p
}

func (*Size_specContext) IsSize_specContext() {}

func NewSize_specContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Size_specContext {
	var p = new(Size_specContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SyslParserRULE_size_spec

	return p
}

func (s *Size_specContext) GetParser() antlr.Parser { return s.parser }

func (s *Size_specContext) OPEN_PAREN() antlr.TerminalNode {
	return s.GetToken(SyslParserOPEN_PAREN, 0)
}

func (s *Size_specContext) AllDIGITS() []antlr.TerminalNode {
	return s.GetTokens(SyslParserDIGITS)
}

func (s *Size_specContext) DIGITS(i int) antlr.TerminalNode {
	return s.GetToken(SyslParserDIGITS, i)
}

func (s *Size_specContext) CLOSE_PAREN() antlr.TerminalNode {
	return s.GetToken(SyslParserCLOSE_PAREN, 0)
}

func (s *Size_specContext) DOT() antlr.TerminalNode {
	return s.GetToken(SyslParserDOT, 0)
}

func (s *Size_specContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Size_specContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Size_specContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.EnterSize_spec(s)
	}
}

func (s *Size_specContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.ExitSize_spec(s)
	}
}

func (p *SyslParser) Size_spec() (localctx ISize_specContext) {
	localctx = NewSize_specContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SyslParserRULE_size_spec)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(195)
		p.Match(SyslParserOPEN_PAREN)
	}
	{
		p.SetState(196)
		p.Match(SyslParserDIGITS)
	}
	p.SetState(199)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SyslParserDOT {
		{
			p.SetState(197)
			p.Match(SyslParserDOT)
		}
		{
			p.SetState(198)
			p.Match(SyslParserDIGITS)
		}

	}
	{
		p.SetState(201)
		p.Match(SyslParserCLOSE_PAREN)
	}

	return localctx
}

// IModifier_listContext is an interface to support dynamic dispatch.
type IModifier_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsModifier_listContext differentiates from other interfaces.
	IsModifier_listContext()
}

type Modifier_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModifier_listContext() *Modifier_listContext {
	var p = new(Modifier_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SyslParserRULE_modifier_list
	return p
}

func (*Modifier_listContext) IsModifier_listContext() {}

func NewModifier_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Modifier_listContext {
	var p = new(Modifier_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SyslParserRULE_modifier_list

	return p
}

func (s *Modifier_listContext) GetParser() antlr.Parser { return s.parser }

func (s *Modifier_listContext) AllModifier() []IModifierContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IModifierContext)(nil)).Elem())
	var tst = make([]IModifierContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IModifierContext)
		}
	}

	return tst
}

func (s *Modifier_listContext) Modifier(i int) IModifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IModifierContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IModifierContext)
}

func (s *Modifier_listContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(SyslParserCOMMA)
}

func (s *Modifier_listContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(SyslParserCOMMA, i)
}

func (s *Modifier_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Modifier_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Modifier_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.EnterModifier_list(s)
	}
}

func (s *Modifier_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.ExitModifier_list(s)
	}
}

func (p *SyslParser) Modifier_list() (localctx IModifier_listContext) {
	localctx = NewModifier_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SyslParserRULE_modifier_list)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(203)
		p.Modifier()
	}
	p.SetState(208)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SyslParserCOMMA {
		{
			p.SetState(204)
			p.Match(SyslParserCOMMA)
		}
		{
			p.SetState(205)
			p.Modifier()
		}

		p.SetState(210)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISq_openContext is an interface to support dynamic dispatch.
type ISq_openContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSq_openContext differentiates from other interfaces.
	IsSq_openContext()
}

type Sq_openContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySq_openContext() *Sq_openContext {
	var p = new(Sq_openContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SyslParserRULE_sq_open
	return p
}

func (*Sq_openContext) IsSq_openContext() {}

func NewSq_openContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Sq_openContext {
	var p = new(Sq_openContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SyslParserRULE_sq_open

	return p
}

func (s *Sq_openContext) GetParser() antlr.Parser { return s.parser }

func (s *Sq_openContext) SQ_OPEN() antlr.TerminalNode {
	return s.GetToken(SyslParserSQ_OPEN, 0)
}

func (s *Sq_openContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Sq_openContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Sq_openContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.EnterSq_open(s)
	}
}

func (s *Sq_openContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SyslParserListener); ok {
		listenerT.ExitSq_open(s)
	}
}

func (p *SyslParser) Sq_open() (localctx ISq_openContext) {
	localctx = NewSq_openContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SyslParserRULE_sq_open)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(211)
		p.Match(SyslParserSQ_OPEN)
	}

	return localctx
}

// IModifiersContext is an interface to support dynamic dispatch.
type IModifiersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsModifiersContext differentiates from other interfaces.
	IsModifiersContext()
}

type ModifiersContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModifiersContext() *ModifiersContext {
	var p = new(ModifiersContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SyslParserRULE_modifiers
	return p
}

func (*ModifiersContext) IsModifiersContext() {}

func NewModifiersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModifiersContext {
	var p = new(ModifiersContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SyslParserRULE_modifiers

	return p
}

func (s *ModifiersContext) GetParser() antlr.Parser { return s.parser }

func (s *ModifiersContext) Sq_open() ISq_openContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISq_openContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISq_openContext)
}

func (s *ModifiersContext) Modifier_list() IModifier_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IModifier_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IModifier_listContext)
}

func (s *ModifiersContext) SQ_CLOSE() antlr.TerminalNode {
	return s.GetToken(SyslParserSQ_CLOSE, 0)
}

func (s *ModifiersContext) GetRuleContext() antlr.RuleContext {
	return s
}
